--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -189,12 +189,40 @@
          * The device must be provisioned with HDCP keys (for protected content).
     -->
     <bool name="config_enableWifiDisplay">true</bool>
-
+    
+       <!-- Hardware keys present on the device, stored as a bit field.		
+          This integer should equal the sum of the corresponding value for each		
+          of the following keys present:		
+              1 - Home		
+              2 - Back		
+              4 - Menu		
+              8 - Assistant (search)		
+             16 - App switch		
+             32 - Camera		
+             64 - Volume rocker		
+          For example, a device with Home, Back and Menu keys would set this		
+          config to 7. -->		
+     <integer name="config_deviceHardwareKeys">71</integer>		
+ 
 <!-- Indicate whether closing the lid causes the device to go to sleep and opening
          it causes the device to wake up.
          The default is false. -->
     <bool name="config_lidControlsSleep">true</bool>
 
+    <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.		
+          This integer should equal the sum of the corresponding value for each		
+          of the following keys present:		
+              1 - Home		
+              2 - Back		
+              4 - Menu		
+              8 - Assistant (search)		
+             16 - App switch		
+             32 - Camera		
+             64 - Volume rocker		
+          For example, a device with Home, Back and Menu keys would set this		
+          config to 7. -->		
+     <integer name="config_deviceHardwareWakeKeys">65</integer>		
+ 
     <!-- Boolean indicating if restoring network selection should be skipped -->
     <!-- The restoring is handled by modem if it is true-->
     <bool name="skip_restoring_network_selection">true</bool>
